--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>BreastCancer</title>
+  <title>Breast Cancer Diagnose</title>
   <base href="/">
   <script src="assets/js/synaptic.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
